--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,30 @@
 @tailwind utilities;
 
 
-.my-btn {@apply px-5 font-semibold hover:bg-black hover:text-red-500 py-2 bg-red-500 text-lg text-white}
+/* .my-btn {@apply px-5 font-semibold hover:bg-black hover:text-red-500 py-2 bg-red-500 text-lg text-white} */
+.my-btn{@apply font-semibold text-white bg-gradient-to-r px-5 py-2 from-black to-red-700  hover:from-orange-200 hover:to-orange-200 hover:text-red-500 uppercase}
 
 .active {@apply text-red-500 border-b pb-1 border-red-500}
+
+         
+         
+.btn-grad {
+    background-image: linear-gradient(to right, #000000 0%, #e74c3c  51%, #000000  100%);
+    margin: auto;
+    padding: 8px 40px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+  }
+
+  .btn-grad:hover {
+    background-position: right center;
+    text-decoration: none;
+  }
+ 
+ 
