--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
          
 .btn-grad {
     background-image: linear-gradient(to right, #000000 0%, #e74c3c  51%, #000000  100%);
-    margin: auto;
+    margin: aut;
     padding: 8px 40px;
     text-align: center;
     text-transform: uppercase;
