--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
 
 .nav-bg{@apply bg-black}
 
+.my-btn-disable{@apply bg-blue-500 text-white font-bold py-2 px-4 rounded opacity-50 cursor-not-allowed}
+
 .my-text-color{@apply text-center text-3xl lg:text-4xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-black to-red-600 animate-bounce}
          
 .btn-grad {
