--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,13 @@
 
 .nav-bg{@apply bg-black}
 
+.round{
+  border-radius: 100px 100px 0px 0px   ;
+}
+
 .my-btn-disable{@apply bg-blue-500 text-white font-bold py-2 px-4 rounded opacity-50 cursor-not-allowed}
 
-.my-text-color{@apply text-center text-3xl lg:text-4xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-black to-red-600 animate-bounce}
+.my-text-color{@apply text-center  font-bold bg-clip-text text-transparent bg-gradient-to-r from-black to-red-600 }
          
 .btn-grad {
     background-image: linear-gradient(to right, #000000 0%, #e74c3c  51%, #000000  100%);
