--- a/src/shared components/navbar/navbar.css
+++ b/src/shared components/navbar/navbar.css
@@ -15,7 +15,7 @@
     -webkit-box-sizing: border-box; 
   }
       
-  .my-btn:hover{ @apply border-b-0 text-black;}
+  .my-btn:hover{ @apply border-b-0  font-bold;}
   
   .my-btn:after { 
     content: "";
@@ -24,8 +24,8 @@
     top: 0; 
     width: 0;  
     position: absolute; 
-    transition: all 0.3s ease 0s; 
-    -webkit-transition: all 0.3s ease 0s; 
+    transition: all 0.6s ease 0s; 
+    -webkit-transition: all 0.6s ease-out; 
     z-index: -1;
   }
   
