--- a/src/index.css
+++ b/src/index.css
@@ -171,6 +171,8 @@ font-family: 'Roboto Slab', serif;
 .section-btn:after{ background: #DF826C; }
 /* =============================================================== */
 
-
+.sh{
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+}
 
 .b {@apply border border-black}
